{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 141,
  "lineage": "3ea269a3-0054-546c-1274-288334353644",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0812a3d8d4e0c61eb",
            "association_id": "eipassoc-0734890fe94b24667",
            "domain": "vpc",
            "id": "eipalloc-0812a3d8d4e0c61eb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c4ff8d32982f2782",
            "private_dns": "ip-192-168-1-246.ec2.internal",
            "private_ip": "192.168.1.246",
            "public_dns": "ec2-23-22-56-119.compute-1.amazonaws.com",
            "public_ip": "23.22.56.119",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097550552923:internet-gateway/igw-04935781f7f6020b4",
            "id": "igw-04935781f7f6020b4",
            "owner_id": "097550552923",
            "tags": {
              "Name": "custom-vpc-igw"
            },
            "tags_all": {
              "Name": "custom-vpc-igw"
            },
            "vpc_id": "vpc-0a6c815c7f6c33ebe"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:097550552923:loadbalancer/app/alb/b5684fa6aba61638",
            "arn_suffix": "app/alb/b5684fa6aba61638",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-2105541196.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:097550552923:loadbalancer/app/alb/b5684fa6aba61638",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e430b249dd38aed6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02b7337332a3e76d9"
              },
              {
                "subnet_id": "subnet-0ddd099839e347b69"
              }
            ],
            "subnets": [
              "subnet-02b7337332a3e76d9",
              "subnet-0ddd099839e347b69"
            ],
            "vpc_id": "vpc-0a6c815c7f6c33ebe",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:097550552923:listener/app/alb/b5684fa6aba61638/55bd739ef36aec07",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:097550552923:targetgroup/alb-target-group/ad6016c5238e08a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:097550552923:listener/app/alb/b5684fa6aba61638/55bd739ef36aec07",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:097550552923:loadbalancer/app/alb/b5684fa6aba61638",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:097550552923:targetgroup/alb-target-group/ad6016c5238e08a8",
            "arn_suffix": "targetgroup/alb-target-group/ad6016c5238e08a8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:097550552923:targetgroup/alb-target-group/ad6016c5238e08a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a6c815c7f6c33ebe"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0812a3d8d4e0c61eb",
            "connectivity_type": "public",
            "id": "nat-0f225037456dfeec0",
            "network_interface_id": "eni-0c4ff8d32982f2782",
            "private_ip": "192.168.1.246",
            "public_ip": "23.22.56.119",
            "subnet_id": "subnet-0ddd099839e347b69"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097550552923:route-table/rtb-093d0c5e9591e6f9b",
            "id": "rtb-093d0c5e9591e6f9b",
            "owner_id": "097550552923",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f225037456dfeec0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c815c7f6c33ebe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097550552923:route-table/rtb-0d20ef08f64ead439",
            "id": "rtb-0d20ef08f64ead439",
            "owner_id": "097550552923",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04935781f7f6020b4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "custom-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c815c7f6c33ebe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-03bef46206eefda21",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0addeb2a220148bfb",
            "route_table_id": "rtb-0d20ef08f64ead439",
            "subnet_id": "subnet-03bef46206eefda21"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2"
          ]
        },
        {
          "index_key": "subnet-0e7ed476b1463de13",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07aa472735f5ddc23",
            "route_table_id": "rtb-0d20ef08f64ead439",
            "subnet_id": "subnet-0e7ed476b1463de13"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-02b7337332a3e76d9",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce7e3ce66ec934bc",
            "route_table_id": "rtb-0d20ef08f64ead439",
            "subnet_id": "subnet-02b7337332a3e76d9"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2"
          ]
        },
        {
          "index_key": "subnet-0ddd099839e347b69",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08aa1f432a5a9cf68",
            "route_table_id": "rtb-0d20ef08f64ead439",
            "subnet_id": "subnet-0ddd099839e347b69"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097550552923:security-group/sg-0e430b249dd38aed6",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e430b249dd38aed6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230310163243137900000002",
            "name_prefix": "terraform-",
            "owner_id": "097550552923",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6c815c7f6c33ebe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097550552923:security-group/sg-0ccc2502eeaa1a950",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccc2502eeaa1a950",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e430b249dd38aed6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asg-security-group",
            "name_prefix": "",
            "owner_id": "097550552923",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asg security group"
            },
            "tags_all": {
              "Name": "asg security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c815c7f6c33ebe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097550552923:subnet/subnet-0e7ed476b1463de13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7ed476b1463de13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097550552923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "custom-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0a6c815c7f6c33ebe"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097550552923:subnet/subnet-03bef46206eefda21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bef46206eefda21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097550552923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "custom-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-0a6c815c7f6c33ebe"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097550552923:subnet/subnet-0ddd099839e347b69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddd099839e347b69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097550552923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "custom-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0a6c815c7f6c33ebe"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097550552923:subnet/subnet-02b7337332a3e76d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b7337332a3e76d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097550552923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "custom-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-0a6c815c7f6c33ebe"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097550552923:vpc/vpc-0a6c815c7f6c33ebe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0ef1ac0993d839f2a",
            "default_route_table_id": "rtb-0609e6bb84c125a39",
            "default_security_group_id": "sg-00fcbe87943e99464",
            "dhcp_options_id": "dopt-09c23fc3db15b5d21",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6c815c7f6c33ebe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0609e6bb84c125a39",
            "owner_id": "097550552923",
            "tags": {
              "Name": "custom-vpc"
            },
            "tags_all": {
              "Name": "custom-vpc"
            }
          }
        }
      ]
    }
  ]
}